# pymc_practice

./: .envrc  .gitignore  README.md  pyproject.toml
src/notebook/: 第1章_確率分布を理解する.ipynb  第2章_よく利用される確率分布.ipynb  第4章_はじめてのベイズ推論実習.ipynb  第5章_ベイズ推論プログラミング-1.ipynb  第5章_ベイズ推論プログラミング-2.ipynb  第6章_ベイズ推論の業務活用事例_1_ABテストの効果検証.ipynb  第6章_ベイズ推論の業務活用事例_2_ベイズ回帰モデルによる効果検証.ipynb  第6章_ベイズ推論の業務活用事例_3_IRT(Item Response Theory)によるテスト評価結果.ipynb
src/pymc_practice/: __init__.py
