[project]
name = "pymc-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "topazape", email = "topazape@gmail.com" }
]
dependencies = [
    "jupyterlab>=4.0.9",
    "pymc>=5.6.1",
    "seaborn>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
